--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "johnny-five": "^0.10.6",
     "raspi-io": "^7.2.4",
     "serve-static": "^1.11.2",
-    "socket.io": "^1.7.3",
-    "udp-serial": "^0.2.0"
+    "socket.io": "^1.7.3"
   }
 }
