--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.fzz filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
+*.xcf filter=lfs diff=lfs merge=lfs -text
