Aligns package.json of mqtt-sniffer with mqtt-publisher

--- a/tools/mqtt-sniffer/package.json
+++ b/tools/mqtt-sniffer/package.json
@@ -1,13 +1,13 @@
 {
   "name": "mqtt-sniffer",
   "version": "1.0.0",
-  "description": "",
+  "description": "Listen to a MQTT topic",
   "main": "mqtt-sniffer.js",
   "scripts": {
     "start": "node mqtt-sniffer.js"
   },
-  "author": "",
-  "license": "MIT",
+  "author": "Frederik S. Held (kontakt@frederikheld.de)",
+  "license": "SEE LICENSE IN project root",
   "dependencies": {
     "mqtt": "^3.0.0"
   }
